emi-project/wordpress-fpm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emi-wordpress-fpm
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emi-wordpress-fpm
  template:
    metadata:
      labels:
        app: emi-wordpress-fpm
    spec:
      containers:
      - name: emi-wordpress-fpm
        image: wordpress:php8.2-fpm-alpine
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: emi-wordpress-fpm-content
          readOnly: false
          mountPath: /var/www/html/
        - name:  emi-wordpress-fpm-ini
          readOnly: true
          mountPath: /usr/local/etc/php/conf.d/wordpress.ini
          subPath: wordpress.ini
        - name:  emi-www-extra-conf
          readOnly: true
          mountPath: /usr/local/etc/php-fpm.d/www-extra.conf
          subPath: www-extra.conf
        resources:
          requests:
            memory: 600Mi
            cpu: 400m
          limits:
            memory: 700Mi
            cpu: 600m
      volumes:
      - name: emi-wordpress-fpm-content
        persistentVolumeClaim:
          claimName: wordpress-emi-content-volume
      - name: emi-wordpress-fpm-ini
        configMap:
          name: wordpress-fpm-ini
      - name: emi-www-extra-conf
        configMap:
          name: www-extra-conf
      terminationGracePeriodSeconds: 45
---
apiVersion: v1
kind: Service
metadata:
  name: emi-wordpress-fpm-svc
  labels:
    app: emi-wordpress-fpm
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app: emi-wordpress-fpm
