emi-project/wordpress-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emi-wordpress-nginx
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emi-wordpress-nginx
  template:
    metadata:
      labels:
        app: emi-wordpress-nginx
    spec:
      containers:
      - name: emi-wordpress-nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-emi-content-volume
          readOnly: false
          mountPath: /var/www/html/
        - name: config
          mountPath: /etc/nginx/conf.d/wordpress.conf
          subPath: wordpress.conf
          readOnly: false
      volumes:
      - name: wordpress-emi-content-volume
        persistentVolumeClaim:
          claimName: wordpress-emi-content-volume
      - name: config
        configMap:
          name: emi-wordpress-nginx-config
      terminationGracePeriodSeconds: 45
---
apiVersion: v1
kind: Service
metadata:
  name: emi-wordpress-nginx-svc
  labels:
    app: emi-wordpress-nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: emi-wordpress-nginx
