emi-project/wordpress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emi-wordpress
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emi-wordpress
  template:
    metadata:
      labels:
        app: emi-wordpress
    spec:
      containers:
        - name: emi-wordpress-fpm
          image: wordpress:php8.2-fpm-alpine
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: emi-wordpress-content
              readOnly: false
              mountPath: /var/www/html/
            - name: emi-wordpress-fpm-ini
              readOnly: true
              mountPath: /usr/local/etc/php/conf.d/wordpress.ini
              subPath: wordpress.ini
            - name: emi-www-extra-conf
              readOnly: true
              mountPath: /usr/local/etc/php-fpm.d/www-extra.conf
              subPath: www-extra.conf
          resources:
            requests:
              memory: 300Mi
              cpu: 200m
            limits:
              memory: 400Mi
              cpu: 400m
        - name: emi-wordpress-nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: emi-wordpress-content
              readOnly: false
              mountPath: /var/www/html/
            - name: config
              mountPath: /etc/nginx/conf.d/wordpress.conf
              subPath: wordpress.conf
              readOnly: true
          resources:
            requests:
              memory: 50Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 200m
      volumes:
        - name: emi-wordpress-content
          persistentVolumeClaim:
            claimName: wordpress-emi-content-volume
        - name: emi-wordpress-fpm-ini
          configMap:
            name: wordpress-fpm-ini
        - name: emi-www-extra-conf
          configMap:
            name: www-extra-conf
        - name: config
          configMap:
            name: emi-wordpress-nginx-config
      terminationGracePeriodSeconds: 45
---
apiVersion: v1
kind: Service
metadata:
  name: emi-wordpress-svc
  labels:
    app: emi-wordpress
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: emi-wordpress
