emi-project/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: emi-project-ingress-certificate
      hosts:
        - emi.uchile.cl
  rules:
    - host: emi.uchile.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emi-wordpress-svc
                port:
                  number: 80
