emi-project/listenerset.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emi-uchile-cl-https-route
  namespace: emi-project
spec:
  hostnames:
  - emi.uchile.cl
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: emi-listeners
      namespace: emi-project
      sectionName: emi-uchile-cl-https
  rules:
    - backendRefs:
        - name: emi-wordpress-svc
          namespace: emi-project
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
